feat: draft opaque collection support
Adds new variable ::sta_enable_collections that when enabled, returns the results of collection operations as an opaque pointer in Tcl to avoid conversion overhead.

Involved moving as much of the gathering and filtering logic to C++ as possible to C++.

Currently confirmed working for get_ports and collection operations on the result of get_ports. Partial work done on get_insts.

This commit is not final and will be amended as work on this progresses.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -432,6 +432,7 @@ set(SWIG_FILES
   ${STA_HOME}/search/Search.i
   ${STA_HOME}/spice/WriteSpice.i
   ${STA_HOME}/tcl/Exception.i
+  ${STA_HOME}/tcl/Collections.i
   ${STA_HOME}/tcl/StaTclTypes.i
   ${STA_HOME}/util/Util.i
   ${STA_HOME}/verilog/Verilog.i
